fix z-index on action button

--- a/src/components/atoms/ActionButton/ActionButton.scss
+++ b/src/components/atoms/ActionButton/ActionButton.scss
@@ -1,5 +1,6 @@
 .action-button {
     position: fixed;
+    z-index: 50;
     top: calc(100svh - var(--navbar-height) - 4rem);
     right: 1rem;
     height: 3.5rem;
